# sim-bench

./: .gitattributes  .gitignore  ALBUM_MVP_COMPLETE.md  APP_ARCHITECTURE.md  ARCHITECTURE_DOCUMENTATION_COMPLETE.md  CHANGES.md  CHANGES_LOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CLIP_AESTHETIC_INTEGRATED.md  CLUSTER_DEBUG_VIEW_COMPLETE.md  CURRENT_IMPLEMENTATION_STATUS.md  DOCUMENTATION_UPDATE_ASSESSMENT.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENV_SETUP.md  FEBRUARY_2026_UPDATES.md  FINAL_SCORE_COLUMN_ADDED.md  GITHUB_SETUP.md  GIT_LFS_MIGRATION_COMPLETE.md  HYPERPARAMETER_SEARCH_QUICKSTART.md  HYPERPARAM_SEARCH_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  KAGGLE_SETUP.md  LICENSE  METHODS_FIXED.md  MILESTONES.md  MODELS_NOW_ACTIVE.txt  MODELS_ORGANIZED.md  MODEL_ACTIVATION_FIX.md  PHOTO_ORGANIZATION_IMPLEMENTATION.md  PRODUCTION_MODELS_READY.txt  PROJECT_SUMMARY.md  QUICK_START_KAGGLE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PROGRESS.md  RETROSPECTIVE.html  RETROSPECTIVE.md  RETROSPECTIVE_README.md  (+38 more)
.claude/: settings.local.json
app/: ARCHITECTURE.md  README.md  REFACTORING_SUMMARY.md  __init__.py  agent_v1.py  components.py  config.py  face_clustering_comparison.py  state.py
configs/: benchmark.yaml  clustering_benchmark.yaml  dataset.budapest.yaml  dataset.holidays.yaml  dataset.phototriage.yaml  dataset.ukbench.yaml  example_external.yaml  example_phototriage.yaml  global_config.yaml  hyperparameter_experiments.csv  learned_aesthetic_prompts.yaml  metrics.yaml  pairwise_benchmark.3hour.yaml  pairwise_benchmark.logging_test.yaml  pipeline.yaml  (+31 more)
(+787 files in other folders)
