[metadata]
name = sim-bench
version = 0.1.0
description = Simple, config-driven image similarity benchmarking (UKBench baseline)
license = MIT
author = Your Name

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    numpy>=1.26,<2.0
    scipy>=1.11
    scikit-learn>=1.4
    opencv-contrib-python>=4.8,<4.10
    Pillow>=10.2
    tqdm>=4.66
    PyYAML>=6.0
    pandas>=2.0
    matplotlib>=3.8

[options.entry_points]
console_scripts =
    sim-bench = sim_bench.cli:main
